syntax = "proto3";
package utility;

option go_package = "github.com/ginchuco/ginchu/state_machine/types";

import "google/protobuf/any.proto";

message MessageSend {
  bytes from_address = 1;
  bytes to_address = 2;
  string amount = 3;
  optional bytes signer = 4;
}

message MessageStake {
  bytes public_key = 1;
  string amount = 2;
  bytes output_address = 3;
  optional bytes signer = 4;
}

message MessageEditStake {
  bytes address = 1;
  string amount = 2;
  bytes output_address = 3;
  optional bytes signer = 4;
}

message MessageUnstake {
  bytes address = 1;
  optional bytes signer = 2;
}

message MessagePause {
  bytes address = 1;
  optional bytes signer = 2;
}

message MessageUnpause {
  bytes address = 1;
  optional bytes signer = 2;
}

message MessageChangeParameter {
  bytes owner = 1;
  string parameter_key = 2;
  google.protobuf.Any parameter_value = 3;
  optional bytes signer = 4;
}

message MessageDoubleSign {
  Vote vote_a = 1;
  Vote vote_b = 2;
  optional bytes reporter_address = 3;
  optional bytes signer = 4;
}

message Vote {
  bytes public_key = 1;
  uint32 height = 2;
  uint32 round = 3;
  uint32 type = 4;
  bytes block_hash = 5;
}